@@ -4,6 +4,7 @@
 
 - added TypeScript support
 - extended `base64` by adding support for `content-type;base64,data` format
+- updated `schema.define(key, type, required, [default_error_message])`
 - fixed `String.encrypt_uid()`
 - fixed wildcard routing combinated with dynamic arguments
 
